static/css/style.css
/* ... */
@keyframes backgroundSizeAnimation {
    0% {
        background-position: 100%;
    }

    25% {
        background-position: 50%;
    }

    50% {
        background-position: 0%;
    }

    75% {
        background-position: 50%;
    }

    100% {
        background-position: 100%;
    }

}

.purpleText {
    color: var(--purple_text_color);
    font-weight: 800;
}

.textBackground {
    font-weight: 800;
    background: var(--text_bg_color);
    border-radius: 5px;
    font-size: 17px;
    margin: 0 3px;
    padding: 2px 4px;
}

.iconContainer {
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    overflow-x: scroll;
    margin-top: 20px;

}

.iconContainer::-webkit-scrollbar {
    display: none;
}



.iconItem {
    width: 49px;
    height: 43px;
    box-sizing: border-box;
    border-radius: 7px;
    display: flex;
    margin-left: 10px;

    backdrop-filter: blur(var(--card_filter));
    -webkit-backdrop-filter: blur(var(--card_filter));
    background: var(--item_bg_color);
    align-items: center;
    justify-content: center;
    transition: width 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
    flex-shrink: 0;
}
.iconItem i,.iconItem svg{
    width: 22px;
    height: 22px;
    fill:var(--fill);
    font-size: 22px;
     margin-right: 3px;
}
.switch {
    width: 55px;
    height: 43px;
    box-sizing: border-box;
    border-radius: 7px;
    display: flex;
    margin-left: 10px;
    backdrop-filter: blur(var(--card_filter));-webkit-backdrop-filter: blur(var(--card_filter));
    background: var(--item_bg_color);

    align-items: center;
    justify-content: center;
    transition: width 1s ease, opacity 1s ease, transform 1s ease;
    flex-shrink: 0;
}

.iconTip {
    white-space: nowrap;
    display: none;
}





.iconItem:hover {
    width: 95px;
    transform: translateY(-2px);
    background: var(--item_hover_color);
}


.iconItem:hover .iconTip {
    display: block;
}

.switch:hover {
    width: 55px;
    /* transform: translateY(-2px); */
    background: var(--item_hover_color);
}

.tanChiShe {
    width: 85%;
}

.tanChiShe img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.title {
    display: flex;
    align-items: center;
    font-size: 26px;
    font-weight: 800;
    margin: 20px 0;
    transition: transform 0.4s ease;
}
.title i ,.title svg{
    margin-right: 8px;
    height: 26px;
    width: 26px;
   fill:var(--fill);
}
.title:hover {
    transform: translateY(-5px);
}

.projectList {
    display: flex;
    flex-wrap: wrap;
}

.projectItem {
    margin: 7px;
    display: flex;
    background-color: var(--item_bg_color);
    border-radius: 8px;
    padding: 15px;
    height: 95px;
    width: calc(25% - 15px);
    backdrop-filter: blur(var(--card_filter));-webkit-backdrop-filter: blur(var(--card_filter));
    -webkit-backdrop-filter: blur(var(--card_filter));-webkit-backdrop-filter: blur(var(--card_filter));
    transition: opacity 0.3s ease, background-color 0.3s ease, border 0.3s ease, transform 0.2s ease;


}

.projectItem {
    display: flex;
    background-color: var(--item_bg_color);
    border-radius: 8px;
    padding: 15px;
    height: 100px;
    width: calc(25% - 15px);
    backdrop-filter: blur(var(--card_filter));-webkit-backdrop-filter: blur(var(--card_filter));
    transition: opacity 0.5s ease, background-color 0.2s ease, border 0.2s ease, transform 0.3s ease;

}


.projectItem:hover {
    box-shadow: 0 8px 16px -4px #2c2d300c;
    transform: translateY(-2px);

}

.projectItem.pressed {
    transform: scale(0.9);
    /* Scale down to 0.9x */
    background-color: var(--item_hover_color);
}

.projectItem:hover .projectItemLeft {
    width: 100%;
}

.projectItem:hover .projectItemRight {
    width: 0%;
}

.projectItem:hover .projectItemRight img {
    transform: rotate(40deg);
}

.projectItem:hover h1 {
    font-size: 18px;
}

.projectItemLeft p {
    font-size: 12px;
    margin-top: 15px;
    color: var(--item_left_text_color);
}


.projectItemLeft h1 {
    font-weight: normal;
    font-size: 16px;
    margin: 0px;

    transition: font-size 0.4s ease;
    color: var(--item_left_title_color);
}

.projectItemLeft {
    transition: width 0.4s ease;
    height: 100%;
    width: 80%;
}


.projectItemRight {
    overflow: hidden;
    transition: width 0.4s ease;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 20%;
    height: 100%;
}

.projectItemRight img {

    height: 39px;
    width: 39px;

}

.skill {
    padding: 25px;
    width: 100%;
}

.skill img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.skill #skillWap {
    display: none;
}

footer {
    position: absolute;
    padding: 10px;
    text-align: center;
    width: 100%;
    backdrop-filter: blur(var(--card_filter));
    -webkit-backdrop-filter: blur(var(--card_filter));
    background: var(--item_bg_color);
    color: var(--footer_text_color);
    font-size: 13px;
    bottom: 0;
}

@media (min-width: 800px) {

    .index-logo {
        display: none;
    }
}

@media (max-width: 1150px) {
    .a {
        width: calc(50% - 20px);
    }
.projectItem{
    margin: 10px;
}
    .b {

        width: calc(50% - 20px);


    }
}
/* ... */

